# Snake

./: .gitlab-ci.yml  Cargo.toml  README.md
font/Snake_Chan/: license.txt
src/: game_logic.rs  main.rs  view.rs
