[package]
name = "snake"
version = "0.1.0"
edition = "2021"
authors = ["Cyprien Borée <cyprien.boree@tuta.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
rand = "0.8.5"
sdl2 = "0.35.2"


[features]
default = ["ttf"]
ttf = ["sdl2/ttf"]
